--- a/package.json
+++ b/package.json
@@ -151,17 +151,21 @@
     "marked": "^4.0.10",
     "mobx-react": "^7.2.0",
     "openapi-sampler": "^1.1.1",
+    "openapi-snippet": "^0.13.0",
     "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.5.1",
     "polished": "^4.1.3",
     "prismjs": "^1.24.1",
+    "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "react-tabs": "^3.2.2",
     "slugify": "~1.4.7",
     "stickyfill": "^1.1.1",
+    "stream": "0.0.2",
     "style-loader": "^3.3.1",
     "swagger2openapi": "^7.0.6",
-    "url-template": "^2.0.8"
+    "url-template": "^2.0.8",
+    "util": "^0.12.4"
   },
   "size-limit": [
     {
